# freetype

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .mailmap  BUILD  CHANGES  CMakeLists.txt  ChangeLog  ChangeLog.20  ChangeLog.21  ChangeLog.22  ChangeLog.23  ChangeLog.24  ChangeLog.25  ChangeLog.26  ChangeLog.27  ChangeLog.28  INSTALL  Jamfile  Jamfile.in  Jamrules  LICENSE.TXT  Makefile  README  README.CVS  README.UNX  README.git  README.md  TODO  [GSoC]ChangeLog  [priyesh]ChangeLog  autogen.sh  azure-pipelines.yml  benchmark.html  bitmap.c  compare-new-to-old.c  configure  descrip.mms  descriptor  (+9 more)
CI/: Readme.md  arch-setup.yml  build-autotools.yml  build-cmake.yml  build.yml  ft-regression.sh  ft-report.sh  ft-test-font.sh  ft-test.sh  ft-tests.config  mingw-setup.yml  regression-test.yml
builds/: detect.mk  exports.mk  freetype.mk  link_dos.mk  link_std.mk  modules.mk  testing.mk  toplevel.mk
builds/amiga/: README  makefile  makefile.os4  smakefile
builds/ansi/: ansi-def.mk  ansi.mk  memdebug.c
builds/atari/: FREETYPE.PRJ
builds/beos/: beos-def.mk  beos.mk  detect.mk
builds/cmake/: FindBrotliDec.cmake  iOS.cmake  testbuild.sh
builds/compiler/: 16bit.h  ansi-cc.mk  bcc-dev.mk  bcc.mk  emx.mk  gcc-dev.mk  gcc.mk  intelc.mk  unix-lcc.mk  visualage.mk  visualc.mk  watcom.mk  watcom16.h  watcom16.mk  win-lcc.mk
builds/cygwin/: configure  configure.in  cygwin-cc.in  cygwin-def.in  cygwin-dev.mk  cygwin.mk  cygwinddef.mk  detect.mk  freetype-config.in  ftsystem.c  install.mk  libtool  ltconfig
builds/cygwin/devel/freetype/config/: ftoption.h
builds/dos/: detect.mk  dos-def.mk  dos-emx.mk  dos-gcc.mk  dos-wat.mk
builds/hurd/: detect.mk
builds/mac/: FreeType.m68k_cfm.make.txt  FreeType.m68k_far.make.txt  FreeType.ppc_carbon.make.txt  FreeType.ppc_classic.make.txt  README  ascii2mpw.py  ftlib.prj  ftmac.c
builds/meson/: extract_freetype_version.py  extract_libtool_version.py  generate_reference_docs.py  parse_modules_cfg.py  process_ftoption_h.py
builds/netware/: caller.c  freetype2.mcp  libft2.imp  libft2.nlm  main_NLM.c
builds/os2/: detect.mk  os2-def.mk  os2-dev.mk  os2-gcc.mk
builds/plan9/: README  p9lib.h
builds/symbian/: bld.inf  freetype.mmp
builds/unix/: .cvsignore  aclocal.m4  config.guess  config.sub  configure  configure.ac  configure.in  configure.raw  detect.mk  freetype-config.in  freetype2.in  freetype2.m4  ft-munmap.m4  ft2unix.h  ftconfig.h.in  ftconfig.in  ftsystem.c  install.mk  unix-cc.in  (+8 more)
config/: detect.mk  freetype.mk  ftconfig.h  ftoption.h  modules.mk
config/unix/: Makefile  Makefile.devel  configure.in  detect.mk  ftconfig.h  ftconfig.in  ftsys.c  ftsystem.c  net.m4  unix-dev.mk  unix-gcc.mk  unix.in  unix.mk
debian/: README.Debian  changelog  control  libfreetype7-dev.files  libfreetype7.copyright  libfreetype7.postinst  rules  rules.museum
demos/: Makefile
devel/: ft2build.h  ftoption.h
docs/: .gitignore  BUGS  BUILD  CHANGES  CUSTOMIZE  DEBUG  DEBUG.TXT  DESIGN  DEVELOPING.md  DOCGUIDE  FTL.txt  INSTALL  INSTALL.ANY  INSTALL.CROSS  INSTALL.GNU  INSTALL.MAC  INSTALL.UNIX  INSTALL.UNX  INSTALL.VMS  INSTALL.md  INSTALL_ANDROID.md  INSTALL_ANY.md  INSTALL_CROSS.md  INSTALL_GNU.md  INSTALL_MAC.md  INSTALL_UNIX.md  INSTALL_VMS.md  LICENSE.TXT  MAKEPP  MODIFYING.md  PROBLEMS  README  Raster_Algorithm.md  TODO  UPGRADE.UNIX  VERSIONS.TXT  convntns.txt  docmaker.py  essai  formats.txt  (+9 more)
glyphtest/: bitmap.h  index.html  main.c  qdbmp.c  qdbmp.h  readme.txt
include/: freetype.h  ft2build.h  ftadvanc.h  ftautoh.h  ftbbox.h  ftbitmap.h  ftcache.h  ftcid.h  fterrors.h  ftfntfmt.h  ftglyph.h  ftgrays.h  ftimage.h  ftmm.h  ftmodapi.h  ftoutln.h  ftraster.h  ftrender.h  ftsynth.h  ftsystem.h  ftttdrv.h  ftwinfnt.h  ftxf86.h  t1tables.h  ttnamedid.h  ttnameid.h  tttables.h
objs/: .cvsignore  .gitignore
scripts/: extract_freetype_version.py  make_distribution_archives.py
src/: Jamfile
subprojects/: harfbuzz.wrap  libpng.wrap
tests/: Jamfile  Makefile  README  README.md  bitmap.c  bitmap.h  gview.c  make_sprite.c  meson.build  mkfile  runme.sh
(+1359 files in other folders)
